@@ -96,7 +96,7 @@ LIB_CXXFLAGS:=$(LIB_CFLAGS)
 BROKER_CFLAGS:=${LIB_CFLAGS} -DVERSION="\"${VERSION}\"" -DTIMESTAMP="\"${TIMESTAMP}\"" -DWITH_BROKER
 CLIENT_CFLAGS:=${CFLAGS} -I../lib -DVERSION="\"${VERSION}\""
 
-BROKER_LIBS:=-ldl
+BROKER_LIBS:=-ldl -lm
 LIB_LIBS:=
 PASSWD_LIBS:=
 
